--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,13 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^6.3.3"
+  },
+  "scripts": {
+    "nodemon": "nodemon app.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
