--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
-    "mongoose": "^6.3.3"
+    "mongoose": "^6.3.3",
+    "validator": "^13.7.0"
   },
   "scripts": {
     "nodemon": "nodemon app.js"
